<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_name">Your name</string>
    <string name="button">To second screen</string>
    <string name="second_screen_text">text</string>
    <string name="second_screen_name">name</string>
    <string name="second_screen_phone">phone</string>
    <string name="second_screen_number">number</string>
    <string name="second_screen_password">password</string>
    <string name="second_screen_email">email</string>
</resources>